--- a/ncsa-security-common/ncsa-security-core/pom.xml
+++ b/ncsa-security-common/ncsa-security-core/pom.xml
@@ -42,6 +42,28 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <!--
+            we don't user log4j, but enough other people do that we have to kill it off, hence this dependency.
+            -->
+           <dependency>
+               <groupId>log4j</groupId>
+               <artifactId>log4j</artifactId>
+               <version>1.2.17</version>
+           </dependency>
+
+<!--   Newer versions. Not clear on how to kill off all logging with this because
+       of API changes to log4J.  Older API still seems to be working though.
+       <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.16.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.16.0</version>
+        </dependency>-->
+
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
